<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- common -->
    <string name="app_name">ezhair</string>
    <string name="page_signin_sumbit">送出</string>
    <string name="hine01">請輸入手機號碼</string>
    <string name="hine02">密碼 (至少6個字元)</string>
    <string name="hine03">確認密碼</string>
    <string name="hine04">請輸入email</string>
    <string name="available">有空</string>
    <!-- page home -->
    <string name="page_home_title">輕鬆預約你專屬的髮型設計師</string>
    <string name="page_home_hot">熱門</string>
    <string name="page_home_near">附近</string>
    <string name="page_home_search">自訂</string>
    <string name="page_home_mail">提醒</string>
    <!-- page signin -->
    <string name="page_signin_prefix">S</string>
    <string name="page_signin_suffix">ign in</string>
    <string name="page_signin_title">會員登入</string>
    <string name="page_signin_register">新會員註冊</string>
    <string name="page_signin_forget">忘記密碼</string>
    <!-- page register -->
    <string name="page_register_prefix">R</string>
    <string name="page_register_suffix">egister</string>
    <string name="page_register_title">加入會員</string>
    <string name="page_register">註冊</string>
    <!-- page forget -->
    <string name="page_forget_prefix">G</string>
    <string name="page_forget_suffix">etpassword</string>
    <string name="page_forget_title">忘記密碼</string>
    <string name="page_forget_des">密碼將以Email寄出</string>
    <!-- page search -->
    <string name="page_search_title">自訂搜尋</string>
    <string name="page_search_des">密碼將以簡訊寄出</string>
    <string name="page_search_btn">搜尋</string>
    <!-- page hot -->
    <string name="hot_artist">熱門設計師</string>
    <!-- page near -->
    <string name="near_search">附近搜尋</string>
    <!-- page result -->
    <string name="result_title">設計師</string>
    <string name="rate">評價  :  </string>
    <string name="store">店家 :  </string>
    <string name="region">區域 :  </string>
    <string name="discount">折扣 :  </string>
    <!-- page profile -->
    <string name="works">作品集</string>
    <string name="msgs">留言</string>
    <string name="favorites">最愛</string>
    <string name="name">姓   名 :</string>
    <string name="rate_profile">評   價 :</string>
    <string name="fame">人   氣 :</string>
    <string name="discount_profike">折   扣 :</string>
    <string name="store_profile">店   家 :</string>
    <string name="address">地   址 :</string>
    <string name="experience">經   歷 :</string>
    <string name="reserve">預約</string>
    <!-- page message -->
    <string name="message">留言版</string>
    <string name="write">留言</string>
    <string name="write_artist">留言給設計師</string>
    <string name="encourage">給你的設計師一點鼓勵吧</string>
    <string name="first">成為第一個留言的會員</string>
    <!-- page portfolio -->
    <string name="portfolio">作品集</string>
    <!-- page reserve -->
    <string name="item">項目</string>
    <string name="date">日期</string>
    <string name="time">時間</string>
    <string name="type">造型</string>
    <string name="haircut">剪髮</string>
    <string name="wash">洗+剪</string>
    <string name="dye">染髮</string>
    <string name="perm">燙髮</string>
    <string name="haircare">護髮</string>
    <string name="next">下一步</string>

</resources>