<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/getpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46.67dp" >

        <TextView
            android:id="@+id/prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_forget_prefix"
            android:textColor="@color/title_prefix"
            android:textSize="@dimen/title_font" />

        <TextView
            android:id="@+id/suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_forget_suffix"
            android:textColor="@color/title_suffix"
            android:textSize="@dimen/title_font" />
    </LinearLayout>

    <TextView
        android:id="@+id/getpswd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getpswd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/page_forget_title"
        android:textColor="@color/title_prefix"
        android:textSize="@dimen/font_size" />

    <TextView
        android:id="@+id/getpswd_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getpswd_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/page_forget_des"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size" />

    <RelativeLayout
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/getpswd_desc"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/num_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_email" />

        <EditText
            android:id="@+id/nun_edit"
            android:layout_width="243dp"
            android:layout_height="36dp"
            android:layout_toRightOf="@id/num_icon"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/hine04"
            android:paddingLeft="15dp"
            android:textSize="@dimen/font_size"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/sumbit"
        android:layout_width="231.67dp"
        android:layout_height="47.33dp"
        android:layout_below="@id/num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_btn_green"
        android:gravity="center"
        android:text="@string/page_signin_sumbit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size" />

</RelativeLayout>