<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46.67dp" >

        <TextView
            android:id="@+id/prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_signin_prefix"
            android:textColor="@color/title_prefix"
            android:textSize="@dimen/title_font" />

        <TextView
            android:id="@+id/suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_signin_suffix"
            android:textColor="@color/title_suffix"
            android:textSize="@dimen/title_font" />
    </LinearLayout>

    <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/page_signin_title"
        android:textColor="@color/page_signin_font_color"
        android:textSize="@dimen/page_signin_title_font" />

    <RelativeLayout
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66.67dp" >

        <ImageView
            android:id="@+id/num_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_phone" />

        <EditText
            android:id="@+id/nun_edit"
            android:layout_width="225dp"
            android:layout_height="32dp"
            android:layout_toRightOf="@id/num_icon"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:hint="@string/hine01"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/page_signin_margin_bordor" >

        <ImageView
            android:id="@+id/pwsd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/page_signin_margin_bordor"
            android:layout_marginRight="@dimen/page_signin_margin_icon"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/pwsd_edit"
            android:layout_width="225dp"
            android:layout_height="32dp"
            android:layout_marginRight="@dimen/page_signin_margin_bordor"
            android:layout_toRightOf="@id/pwsd_icon"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:hint="@string/hine02"
            android:paddingLeft="15dp"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sumbit"
        android:layout_width="@dimen/page_signin_btn_width"
        android:layout_height="@dimen/page_signin_btn_height"
        android:layout_below="@id/pwsd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_btn_green"
        android:gravity="center"
        android:text="@string/page_signin_sumbit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/page_signin_title_font" />

    <TextView
        android:id="@+id/register"
        android:layout_width="@dimen/page_signin_btn_width"
        android:layout_height="@dimen/page_signin_btn_height"
        android:layout_below="@id/sumbit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn_yellow"
        android:gravity="center"
        android:text="@string/page_signin_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/page_signin_title_font" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="@dimen/page_signin_btn_width"
        android:layout_height="@dimen/page_signin_btn_height"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/page_signin_forget"
        android:textColor="@android:color/white"
        android:textSize="@dimen/page_signin_title_font" />

</RelativeLayout>