<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46.67dp" >

        <TextView
            android:id="@+id/prefix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_register_prefix"
            android:textColor="@color/title_prefix"
            android:textSize="@dimen/title_font" />

        <TextView
            android:id="@+id/suffix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_register_suffix"
            android:textColor="@color/title_suffix"
            android:textSize="@dimen/title_font" />
    </LinearLayout>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/page_register_title"
        android:textColor="@color/title_prefix"
        android:textSize="@dimen/font_size" />

    <RelativeLayout
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55.67dp" >

        <ImageView
            android:id="@+id/num_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_phone" />

        <EditText
            android:id="@+id/nun_edit"
            android:layout_width="225dp"
            android:layout_height="32.33dp"
            android:layout_toRightOf="@id/num_icon"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:hint="@string/hine01"
            android:inputType="number"
            android:paddingLeft="15dp"
            android:textSize="@dimen/font_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwsd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26.67dp" >

        <ImageView
            android:id="@+id/pwsd_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/pwsd_edit"
            android:layout_width="225dp"
            android:layout_height="32.33dp"
            android:layout_toRightOf="@id/pwsd_icon"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:hint="@string/hine02"
            android:paddingLeft="15dp"
            android:textSize="@dimen/font_size" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pwsd_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pwsd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26.67dp" >

        <ImageView
            android:id="@+id/pwsd_confirm_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_password" />

        <EditText
            android:id="@+id/pwsd_confirm_edit"
            android:layout_width="225dp"
            android:layout_height="32.33dp"
            android:layout_toRightOf="@id/pwsd_confirm_icon"
            android:background="@drawable/rounded_edittext"
            android:gravity="center_vertical"
            android:hint="@string/hine03"
            android:paddingLeft="15dp"
            android:textSize="@dimen/font_size" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sumbit"
        android:layout_width="200dp"
        android:layout_height="40.33dp"
        android:layout_below="@id/pwsd_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_green"
        android:gravity="center"
        android:text="@string/page_register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_size" />

</RelativeLayout>