<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/green_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_01" >

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/avatar"
            android:layout_width="189.33dp"
            android:layout_height="189.33dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            fresco:fadeDuration="125"
            fresco:placeholderImage="@color/gray_star"
            fresco:roundAsCircle="true"
            fresco:roundingBorderColor="@color/border"
            fresco:roundingBorderWidth="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp" >

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_works"
                android:text="@string/works"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/btn_msg"
                android:text="@string/msgs"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/btn_love"
                android:text="@string/favorites"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_size" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>